fixed header styling to align left side of logo w/ left side of body text

--- a/app/components/blog/blog.scss
+++ b/app/components/blog/blog.scss
@@ -14,5 +14,5 @@
 }
 
 .fm-Blog-wrapper {
-  margin-left: $lgGutter;
+  // margin-left: $lgGutter;
 }
